[package]
name = "deNetwork"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-serialize = "0.5.0"
ark-std = "0.5.0"
crossbeam-channel = "0.5.15"
digest = "0.10.7"
lazy_static = "1.5.0"
log = "0.4.28"
mio = { version = "1.1.0", features = ["os-poll", "net"] }
rand = "0.9.2"
rayon = "1.11.0"
sha2 = "0.10.9"

[[example]]
name = "net"
